# commerce-kit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml  crates-publish.yml  npm-publish.yml  program-coverage.yml  program-unit.yml  (+6 more)
program/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  FUTURE_WORK.md  Makefile  README.md  generate_profiling.py  package-lock.json  package.json  pnpm-lock.yaml  profiling_report.md
program/.github/actions/show-failure-logs/: action.yml
program/.github/workflows/: ci.yml  program-integration.yml  sdk-ts-integration.yml  sdk-ts-unit.yml
program/clients/rust/: Cargo.toml  rustfmt.toml
program/clients/rust/src/: lib.rs
program/clients/typescript/: README.md  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
program/clients/typescript/src/: index.ts
program/clients/typescript/src/codecs/: index.ts  merchantOperatorConfig.ts
program/clients/typescript/tests/: integration.test.ts  unit.test.ts
program/clients/typescript/tests/devnet/: devnet.test.ts
program/clients/typescript/tests/integration/: chargeback.test.ts  clear-payment.test.ts  close-payment.test.ts  initialize-merchant-operator.test.ts  intialize-merchant.test.ts  intialize-operator.test.ts  local-validator.test.ts  make-payment.test.ts  refund-payment.test.ts  update-merchant-authority.test.ts  update-merchant-settlement-wallet.test.ts  update-operator-authority.test.ts
program/clients/typescript/tests/integration/helpers/: assertions.ts  constants.ts  state-utils.ts  tokens.ts  transactions.ts
program/clients/typescript/tests/setup/: mocks.ts  setup.ts  test-with-surfpool.js  test-with-validator.js
program/clients/typescript/tests/setup/mints/: usdc.json  usdt.json
program/clients/typescript/tests/unit/accounts/: merchant.test.ts  merchantOperatorConfig.test.ts  operator.test.ts  payment.test.ts
program/clients/typescript/tests/unit/errors/: commerceProgram.test.ts
program/clients/typescript/tests/unit/instructions/: chargeback-payment.test.ts  clear-payment.test.ts  close-payment.test.ts  create-operator.test.ts  initialize-merchant-operator-config.test.ts  initialize-merchant.test.ts  make-payment.test.ts  refund-payment.test.ts  update-merchant-authority.test.ts  update-merchant-settlement-wallet.test.ts  update-operator-authority.test.ts
program/clients/typescript/tests/unit/pdas/: eventAuthority.test.ts  merchant.test.ts  merchantOperatorConfig.test.ts  operator.test.ts  payment.test.ts  pda-helpers.ts
program/clients/typescript/tests/unit/types/: chargebackPolicy.test.ts  feeType.test.ts  policyData.test.ts  policyType.test.ts  refundPolicy.test.ts  settlementPolicy.test.ts  status.test.ts
program/docs/: OPERATIONS.md  PROGRAM_OVERVIEW.md
program/docs/guides/: guide.md  sample-code.ts
program/idl/: commerce_program.json
program/kora/: README.md  jest.config.ts  package.json  pnpm-lock.yaml  test-kora-integration.sh  test-kora.toml  tsconfig.json
program/kora/docker/: .dockerignore  Dockerfile.simple  entrypoint.sh
program/kora/keys/: commerce-merchant.json  kora-operator.json  test-mint.json
program/kora/src/: index.ts  kora-utils.ts  utils.ts
program/program/: Cargo.toml
program/program/src/: constants.rs  entrypoint.rs  error.rs  events.rs  instructions.rs  lib.rs
program/program/src/processor/: chargeback_payment.rs  clear_payment.rs  close_payment.rs  create_operator.rs  initialize_merchant.rs  initialize_merchant_operator_config.rs  make_payment.rs  mod.rs  process_emit_event.rs  refund_payment.rs  update_merchant_authority.rs  update_merchant_settlement_wallet.rs  update_operator_authority.rs
program/program/src/processor/shared/: account_check.rs  event_utils.rs  mint_utils.rs  mod.rs  token_utils.rs
program/program/src/state/: discriminator.rs  merchant.rs  merchant_operator_config.rs  mod.rs  operator.rs  payment.rs  policy.rs
program/scripts/: generate-client.js  generate-client.ts
program/scripts/lib/: codama-config.ts  commerce-codama-builder.ts  constants.ts  pda-helpers.ts  utils.ts
program/scripts/lib/updates/: append-account-discriminator.ts  append-mo-config-fields.ts  append-mo-config-remaining-accounts.ts  append-pda-derivers.ts  index.ts  set-default-account-values.ts  set-instruction-account-default-values.ts
program/tests/integration-tests/: Cargo.toml
program/tests/integration-tests/src/: assertions.rs  chargeback_payment_tests.rs  clear_payment_tests.rs  close_payment_tests.rs  lib.rs  make_payment_tests.rs  merchant_operator_config_tests.rs  merchant_test.rs  operator_tests.rs  refund_payment_tests.rs  state_utils.rs  utils.rs
program/tests/setup/mints/: usdc.json  usdt.json
(+67 files in other folders)
