[package]
name = "commerce-program"
version = { workspace = true }
edition = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
idl = []
devnet = []

[dependencies]
const-crypto = { workspace = true }
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-associated-token-account = { workspace = true }
shank = { workspace = true }
thiserror = { workspace = true }
