[package]
name = "commerce-program-client"
version = "0.0.1"
edition = "2021"
description = "Rust client for the Commerce Program"
license = "MIT"
repository = "https://github.com/hw-commerce/commerce-program"

[dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }
solana-account-info = { workspace = true }
solana-pubkey = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-instruction = { workspace = true }
solana-cpi = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

solana-client = { workspace = true, optional = true }
solana-account = { workspace = true, optional = true }

[features]
default = []
fetch = ["solana-client", "solana-account"]
